--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,15 +17,15 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Menus/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://SFX/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Player/Player.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://SFX/", "res://Scenes/", "res://Scenes/Player/", "res://Scenes/Enemies/RangedMock/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Level/Level01.tscn", "res://Scenes/Player/Player.tscn", "res://Scenes/Enemies/RangedMock/RangedMock.tscn", "res://Scenes/MainScene/Game.tscn", "res://Scenes/Menus/MainMenu/MainMenu.tscn", "res://Scenes/Menus/PauseMenu/PauseMenu.tscn", "res://Scenes/Menus/SettingsMenu/SettingsMenu.tscn")
+open_scenes=PackedStringArray("res://Scenes/Player/Player.tscn")
 current_scene="res://Scenes/Player/Player.tscn"
 center_split_offset=-304
 selected_default_debugger_tab_idx=1
