--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=380
 dock_hsplit_3=-447
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
@@ -17,15 +17,15 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Player/Player.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://SFX/", "res://Scenes/", "res://Scenes/Player/", "res://Scenes/Enemies/RangedMock/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Menus/UpgradeMenu/UpgradeBox/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://SFX/", "res://Scripts/", "res://Scenes/", "res://Scenes/Menus/", "res://Scenes/Menus/UpgradeMenu/", "res://Scenes/Enemies/RangedMock/", "res://Scenes/Enemies/MeleeMock/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Player/Player.tscn")
+open_scenes=PackedStringArray("res://Scenes/Player/Player.tscn", "res://Scenes/Enemies/RangedMock/RangedMock.tscn", "res://Scenes/Enemies/MeleeMock/MeleeMock.tscn", "res://Scenes/Level/Level01.tscn", "res://Scenes/Menus/UpgradeMenu/UpgradeMenu.tscn", "res://Scenes/Menus/UpgradeMenu/UpgradeBox/UpgradeBox.tscn", "res://Scenes/MainScene/Game.tscn")
 current_scene="res://Scenes/Player/Player.tscn"
 center_split_offset=-304
 selected_default_debugger_tab_idx=1
