--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Menus/UpgradeMenu/UpgradeBox/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://SFX/", "res://Scripts/", "res://Scenes/", "res://Scenes/Menus/", "res://Scenes/Menus/UpgradeMenu/", "res://Scenes/Enemies/RangedMock/", "res://Scenes/Enemies/MeleeMock/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Bullets/MockBullet/MockBullet.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Enemies/", "res://Scenes/Bullets/", "res://Scenes/Bullets/MockBullet/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Player/Player.tscn", "res://Scenes/Enemies/RangedMock/RangedMock.tscn", "res://Scenes/Enemies/MeleeMock/MeleeMock.tscn", "res://Scenes/Level/Level01.tscn", "res://Scenes/Menus/UpgradeMenu/UpgradeMenu.tscn", "res://Scenes/Menus/UpgradeMenu/UpgradeBox/UpgradeBox.tscn", "res://Scenes/MainScene/Game.tscn")
-current_scene="res://Scenes/Player/Player.tscn"
+open_scenes=PackedStringArray("res://Scenes/Drops/Healing Drop/HealingDrop.tscn", "res://Scenes/Enemies/MeleeMock/MeleeMock.tscn", "res://Scenes/Level/Level01.tscn", "res://Scenes/Player/Player.tscn", "res://Scenes/Enemies/RangedMock/RangedMock.tscn", "res://Scenes/Bullets/MockBullet/MockBullet.tscn")
+current_scene="res://Scenes/Bullets/MockBullet/MockBullet.tscn"
 center_split_offset=-304
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
