--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,23 +9,23 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=380
-dock_hsplit_3=-378
+dock_hsplit_2=292
+dock_hsplit_3=-359
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Bullets/MockBullet/MockBullet.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Enemies/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Drops/Healing Drop/HealingDrop.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Objects/", "res://Scenes/Enemies/", "res://Scenes/Drops/", "res://Scenes/Drops/Healing Drop/", "res://Scenes/Bullets/", "res://Scenes/Bullets/MockBullet/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Drops/Healing Drop/HealingDrop.tscn", "res://Scenes/Enemies/MeleeMock/MeleeMock.tscn", "res://Scenes/Level/Level01.tscn", "res://Scenes/Player/Player.tscn", "res://Scenes/Enemies/RangedMock/RangedMock.tscn", "res://Scenes/Bullets/MockBullet/MockBullet.tscn", "res://Scenes/Objects/wall.tscn")
+open_scenes=PackedStringArray("res://Scenes/Drops/AmmoDrop/AmmoDrop.tscn", "res://Scenes/Drops/Healing Drop/HealingDrop.tscn", "res://Scenes/Enemies/MeleeMock/MeleeMock.tscn", "res://Scenes/Player/Player.tscn", "res://Scenes/Enemies/RangedMock/RangedMock.tscn", "res://Scenes/Bullets/MockBullet/MockBullet.tscn", "res://Scenes/Objects/wall.tscn", "res://Scenes/Level/Level01.tscn", "res://Scenes/Objects/Pillar.tscn")
 current_scene="res://Scenes/Level/Level01.tscn"
 center_split_offset=-304
 selected_default_debugger_tab_idx=1
