--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,19 +17,19 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Drops/Healing Drop/HealingDrop.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Objects/", "res://Scenes/Enemies/", "res://Scenes/Drops/", "res://Scenes/Drops/Healing Drop/", "res://Scenes/Bullets/", "res://Scenes/Bullets/MockBullet/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Menus/UpgradeMenu/UpgradeBox/UpgradeBox.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Objects/", "res://Scenes/Menus/", "res://Scenes/Menus/UpgradeMenu/", "res://Scenes/Menus/UpgradeMenu/UpgradeBox/", "res://Scenes/Enemies/", "res://Scenes/Drops/", "res://Scenes/Bullets/", "res://Scenes/Bullets/MockBullet/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Drops/AmmoDrop/AmmoDrop.tscn", "res://Scenes/Drops/Healing Drop/HealingDrop.tscn", "res://Scenes/Enemies/MeleeMock/MeleeMock.tscn", "res://Scenes/Player/Player.tscn", "res://Scenes/Enemies/RangedMock/RangedMock.tscn", "res://Scenes/Bullets/MockBullet/MockBullet.tscn", "res://Scenes/Objects/wall.tscn", "res://Scenes/Level/Level01.tscn", "res://Scenes/Objects/Pillar.tscn")
-current_scene="res://Scenes/Level/Level01.tscn"
+open_scenes=PackedStringArray("res://Scenes/Level/Level01.tscn", "res://Scenes/Player/Player.tscn", "res://Scenes/Menus/UpgradeMenu/UpgradeBox/UpgradeBox.tscn")
+current_scene="res://Scenes/Menus/UpgradeMenu/UpgradeBox/UpgradeBox.tscn"
 center_split_offset=-304
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
