Melhor mas n ta bom ainda

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Bullets/MockBullet/MockBullet.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Objects/", "res://Scenes/Enemies/", "res://Scenes/Enemies/RangedMock/", "res://Scenes/Enemies/MeleeMock/", "res://Scenes/Bullets/", "res://Scenes/Bullets/RaycastBullet/", "res://Scenes/Bullets/MockBullet/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Drops/Healing Drop/HealingDrop.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Enemies/RangedMock/", "res://Scenes/Enemies/MeleeMock/", "res://Scenes/Drops/", "res://Scenes/Drops/Healing Drop/", "res://Scenes/Drops/AmmoDrop/", "res://Scenes/Bullets/", "res://Scenes/Bullets/RaycastBullet/", "res://Scenes/Bullets/MockBullet/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Level/Level01.tscn", "res://Scenes/Enemies/MeleeMock/MeleeMock.tscn", "res://Scenes/Enemies/RangedMock/RangedMock.tscn", "res://Scenes/Objects/wall.tscn", "res://Scenes/Bullets/RaycastBullet/RaycastBullet.tscn", "res://Scenes/Bullets/MockBullet/MockBullet.tscn")
-current_scene="res://Scenes/Bullets/MockBullet/MockBullet.tscn"
+open_scenes=PackedStringArray("res://Scenes/Level/Level01.tscn", "res://Scenes/Enemies/MeleeMock/MeleeMock.tscn", "res://Scenes/Enemies/RangedMock/RangedMock.tscn", "res://Scenes/Objects/wall.tscn", "res://Scenes/Bullets/RaycastBullet/RaycastBullet.tscn", "res://Scenes/Bullets/MockBullet/MockBullet.tscn", "res://Scenes/Player/Player.tscn", "res://Scenes/Drops/AmmoDrop/AmmoDrop.tscn", "res://Scenes/Drops/Healing Drop/HealingDrop.tscn")
+current_scene="res://Scenes/Enemies/RangedMock/RangedMock.tscn"
 center_split_offset=-304
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
