--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -2,10 +2,6 @@
 
 groups=[&"game"]
 
-[res://Scenes/Player/Player.tscn]
-
-groups=[&"player"]
-
 [res://Scenes/Enemies/MeleeMock/MeleeMock.tscn]
 
 groups=[&"enemy"]
@@ -13,3 +9,15 @@ groups=[&"enemy"]
 [res://Scenes/Enemies/RangedMock/RangedMock.tscn]
 
 groups=[&"enemy"]
+
+[res://Scenes/Player/Player.tscn]
+
+groups=[&"player"]
+
+[res://Scenes/Drops/AmmoDrop/AmmoDrop.tscn]
+
+groups=[&"drops"]
+
+[res://Scenes/Drops/Healing Drop/HealingDrop.tscn]
+
+groups=[&"drops"]
